macOS/iOS: Set default audio device

Set QCoreAudioDeviceInfo's isDefault property to true if the audio
device is default.

Fixes: QTBUG-99583
Change-Id: I8db2674155673ed9e91077a26d7c8bfda07ea653
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit dee6b3963974dc814f5f828909dc19792d34af09)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>